Project2/p2/force-app/main/default/objects/Forecast_Entry__c/Forecast_Entry__c.object-meta.xml
<CustomObject>
    <description>This object holds all of the information retrieved by a call to the weather API</description>
    <label>Forecast Entry</label>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Forecast Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>