Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Air_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Air_Pressure__c</fullName>
    <label>Air Pressure</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>