Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Amount_of_Precipitation__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Precipitation__c</fullName>
    <label>Amount of Precipitation</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>