Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Chance_of_Precipitation__c.field-meta.xml
<CustomField>
    <fullName>Chance_of_Precipitation__c</fullName>
    <label>Chance of Precipitation</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>