Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Cloud_Cover__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Cover__c</fullName>
    <label>Cloud Cover</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>