Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>