Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date that this forecast was made for</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>