Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like__c</fullName>
    <label>Feels Like</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>