Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>