Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Hourly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Forecast__c</fullName>
    <label>24 Hour Forecast</label>
    <referenceTo>Hourly_Forecast__c</referenceTo>
    <relationshipLabel>Forecast</relationshipLabel>
    <relationshipName>Forecast</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>