Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where is this forecast entry from?</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Forecast</relationshipLabel>
    <relationshipName>Forecast</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>