Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Low</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>