Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Snow_Depth__c.field-meta.xml
<CustomField>
    <fullName>Snow_Depth__c</fullName>
    <label>Snow Depth</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>