Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>