Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>