Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Wind_Gusts__c.field-meta.xml
<CustomField>
    <fullName>Wind_Gusts__c</fullName>
    <label>Wind Gusts</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>