Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Wind_Heading__c.field-meta.xml
<CustomField>
    <fullName>Wind_Heading__c</fullName>
    <label>Wind Heading</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>