Project2/p2/force-app/main/default/objects/Forecast_Entry__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <label>Wind Speed</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>